[package]
name = "esp32-ssd1680"
version = "0.1.0"
authors = ["Konstantin Terekhov <terehovk@ya.ru>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-svc?/embassy-time-driver"]

[dependencies]
log = { version = "0.4.21", default-features = false }
esp-idf-sys = { version = "0.34.1", default-features = false }
esp-idf-hal = { version = "0.43.1", optional = true, default-features = false }
esp-idf-svc = { version = "0.48.1", optional = true, default-features = false }
embedded-svc = { version = "0.27.1", optional = true, default-features = false }
embedded-graphics = "0.8.1"
ssd1680 = "0.2.0"

[build-dependencies]
embuild = "0.31.2"

[patch.crates-io]
cc = { git = "https://github.com/rust-lang/cc-rs", tag = "1.0.83" }
